# twitch_clips_to_youtube

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
example/: Makefile  main.py  pyproject.toml
example/cookies/: cookies.txt
twitch_clips/: BaseYoutubeUploader.py  CookieFormatter.py  Driver.py  Logger.py  TwitchClipsDownloader.py  TwitchClipsToYoutube.py  TwitchClipsToYoutubeVideos.py  VerticalVideoConverter.py  YTCookieSaver.py  YoutubeAuth.py  YoutubeUploader.py  YoutubeUploaderViaApi.py  YoutubeUploaderViaCookies.py  __init__.py
