[tool.poetry]
name = "twitch-clips"
version = "0.1.0"
description = ""
authors = ["Ninzalo <k-artemiy@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "twitch_clips"}]

[tool.poetry.dependencies]
python = "^3.12"
undetected-chromedriver = "^3.5.5"
selenium = "^4.20.0"
seleniumbase = "^4.26.2"
youtube-up = "^0.4.0"
blinker = "1.7"
twitch-dl = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
