[tool.poetry]
name = "twitch-clips"
version = "1.3.1"
description = ""
authors = ["Ninzalo <k-artemiy@mail.ru>"]
license = "MIT"
readme = "README.md"
packages = [{include = "twitch_clips"}]

[tool.poetry.dependencies]
python = "^3.12"
emoji = "^2.11.1"
youtube-up = "^0.4.0"
twitch-dl = "^2.3.0"
python-dotenv = "^1.0.1"
oauth2client = "^4.1.3"
httplib2 = "^0.22.0"
pytz = "^2024.1"
google-api-python-client = "^2.127.0"
blinker = "1.7"
setuptools = "^69.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
